In explicit strategy printing, also provide module names