@@ -1,27 +1,27 @@
 //==============================================================================
-//	
+//
 //	Copyright (c) 2002-
 //	Authors:
 //	* Dave Parker <david.parker@comlab.ox.ac.uk> (University of Oxford, formerly University of Birmingham)
-//	
+//
 //------------------------------------------------------------------------------
-//	
+//
 //	This file is part of PRISM.
-//	
+//
 //	PRISM is free software; you can redistribute it and/or modify
 //	it under the terms of the GNU General Public License as published by
 //	the Free Software Foundation; either version 2 of the License, or
 //	(at your option) any later version.
-//	
+//
 //	PRISM is distributed in the hope that it will be useful,
 //	but WITHOUT ANY WARRANTY; without even the implied warranty of
 //	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 //	GNU General Public License for more details.
-//	
+//
 //	You should have received a copy of the GNU General Public License
 //	along with PRISM; if not, write to the Free Software Foundation,
 //	Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-//	
+//
 //==============================================================================
 
 package parser;
@@ -196,7 +196,7 @@ public class VarList
 	}
 
 	/**
-	 * Get the number of variables stored in this list.  
+	 * Get the number of variables stored in this list.
 	 */
 	public int getNumVars()
 	{
@@ -205,7 +205,7 @@ public class VarList
 
 	/**
 	 * Look up the index of a variable, as stored in this list, by name.
-	 * Returns -1 if there is no such variable. 
+	 * Returns -1 if there is no such variable.
 	 */
 	public int getIndex(String name)
 	{
@@ -315,18 +315,18 @@ public class VarList
 	}
 
 	/**
-	 * Get the value (as an Object) of a variable, from the value encoded as an integer. 
+	 * Get the value (as an Object) of a variable, from the value encoded as an integer.
 	 */
 	public Object decodeFromInt(int var, int val)
 	{
 		Type type = getType(var);
 		// Integer type
 		if (type instanceof TypeInt) {
-			return new Integer(val + getLow(var));
+			return Integer.valueOf(val + getLow(var));
 		}
 		// Boolean type
 		else if (type instanceof TypeBool) {
-			return new Boolean(val != 0);
+			return Boolean.valueOf(val != 0);
 		}
 		// Anything else
 		return null;
@@ -476,7 +476,7 @@ public class VarList
 	}
 
 	/**
-	 * Convert a bit vector representing a single state to a State object. 
+	 * Convert a bit vector representing a single state to a State object.
 	 */
 	public State convertBitSetToState(BitSet bits)
 	{
